# mangohud-server

./: .gitignore  PKGBUILD  README.md  mangohud-2-0.x86_64.json  meson.build
client/: gen_enum_to_str.py  mangohud-2.json.in  meson.build
client/include/vulkan/: vk_util.h
client/src/: client.cpp  client.h  font_unispace.h  meson.build  overlay.cpp  overlay.h  vulkan.cpp
common/: gpu_metrics.hpp  helpers.cpp  helpers.hpp  log_errno.hpp  socket.cpp  socket.hpp
pkgbuild/: PKGBUILD  change-drm-include-dir.patch
server/: amdgpu.cpp  amdgpu.hpp  api.cpp  api.hpp  cpu.cpp  cpu.hpp  fdinfo.cpp  gpu.cpp  gpu.hpp  hwmon.cpp  hwmon.hpp  intel.cpp  intel.hpp  iostats.cpp  iostats.hpp  main.cpp  memory.cpp  meson.build  nvidia.cpp  nvidia.hpp  nvml.h  nvml_loader.cpp  nvml_loader.hpp  panfrost.cpp  panfrost.hpp
server/amdgpu/: amdgpu.cpp  amdgpu.hpp  gpu_metrics.cpp  gpu_metrics.hpp
server/cpu/: cpu.cpp  cpu.hpp
server/cpu/power/: rapl.cpp  zenergy.cpp  zenpower.cpp
server/intel/: i915.cpp  i915.hpp  i915_drm.cpp
server/intel/i915/: i915.cpp  i915_drm.cpp  i915_drm.hpp
server/intel/xe/: xe.cpp  xe.hpp  xe_drm.cpp  xe_drm.hpp
server/msm/: dpu.cpp  dpu.hpp  kgsl.cpp
server/nvidia/: nvml_loader.hpp
subprojects/: nlohmann.wrap
